# ra_delta_test_task

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  makefile  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  db.py  di.py  ioc.py  main.py  middleware.py  routes.py
app/src/currency/: router.py  service.py
app/src/delivery/: entities.py  models.py  router.py
app/src/delivery/services/: helpers,py  parcel_publisher.py  parcels_service.py  worker_service.py
app/src/health/: router.py
app/src/users/: models.py  services.py
config/: .env.example
migrations/: env.py
migrations/versions/: b71200a6d4f0_init.py
tests/: conftest.py  mock_ioc.py
tests/app/currency/: response.json  test_currency.py
tests/app/delivery/: conftest.py  test_get_parcel.py  test_get_parcels.py  test_parcel_creation.py  test_parcels_types.py
tests/app/health/: test_health.py
