[project]
name = "delivery-service"
version = "0.1.0"
description = "International Delivery Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.4",
    "aiomysql>=0.2.0",
    "apscheduler>=3.11.0",
    "cryptography>=44.0.0",
    "dishka>=1.4.2",
    "fastapi[standard]>=0.115.6",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "motor>=3.6.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "pymysql>=1.1.1",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.22",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "anyio>=4.7.0",
    "fakeredis>=2.26.2",
    "pre-commit>=4.0.1",
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "faker>=33.1.0",
]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = [
    "E",
    "DJ",
    "F",
    "FBT",
    "N",
    "SLF",
    "W",
    "Q",
    "T",
    "COM",
    "TID",
    "INT",
    "FLY",
    "I",
    "C90",
    "COM",
    #  "ANN",
    "A",
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
lint.unfixable = []

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

lint.ignore = ["E501", "A001", "ANN101", "ANN002", "ANN003", "ANN401"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

target-version = "py313"

# Same as Black.
line-length = 80

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 7

[tool.ruff.format]
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
